--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,6 +56,13 @@ body {
 
 @layer base {
   :root {
+
+    --chart-1: 0 73.7% 41.8%;
+    --chart-2: 162.9 93.5% 24.3%;
+    --chart-3: 85.9 78.4% 27.3%;
+    --chart-4: 263.4 70% 50.4%;
+    --chart-5: 224.3 76.3% 48%;
+
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
